# Decentralized-Password-Manager

./: README.md
archive-px/: 2022.tgz
img/src/: frame-format.tex  sequence-diagram-full.md
px/: 2021.tgz
px511-2021/: Reunion-Depart.md
px511-2021/code/: interface.py  master_password.txt  passwords.txt  passwords_chiffres.txt
px511-2021/code/bluetoothFolder/: RunBluetooth.py
px511-2021/code/ice/: ICE.py
px511-2021/code/qrCode/: QrCode.py  TestQrCode.py
px511-2022/code/: .gitignore  Cargo.toml  INIT.sh  README.md  START_SERVER.sh  Start.md  oldREADME.md
px511-2022/code/client/: Cargo.toml  cert.pem
px511-2022/code/client/src/: lib.rs  main.rs
px511-2022/code/client/src/account_manager/: account_operation.rs  mod.rs
px511-2022/code/client/src/client_request/: mod.rs  rq_operations.rs
px511-2022/code/client/src/crypto/: aes.rs  chacha.rs  dhe.rs  file_crypt.rs  keys_handler.rs  mod.rs  session_crypt.rs
px511-2022/code/client/src/display/: menu.rs
px511-2022/code/client/src/pwd_manager/: mod.rs  pwd_handler.rs
px511-2022/code/client/src/test/: main.rs  mod.rs
px511-2022/code/server/: Cargo.toml  cert.pem  key.pem
px511-2022/code/server/src/: main.rs
px511-2022/code/server/src/handlers/: account.rs  debug.rs  dhe.rs  mod.rs  notifs.rs  parse.rs  password.rs  response.rs  session_key.rs
px511-2022/code/server/src/models/: account.rs  devices.rs  error.rs  mod.rs  opts.rs  user_id.rs  users.rs
px511-2022/code/server/src/tests/: challenge.sh  challenge_etape2.sh  create_account_1.sh
px511-2022/code/utils/: Cargo.toml
px511-2022/code/utils/src/: lib.rs
px511-2022/code/utils/src/data/: comm_struct.rs  debug_struct.rs  mod.rs
px511-2022/code/utils/src/tools/: mod.rs  our_macro.rs
px511-2025/code/: .gitignore  README.md
px511-2025/code/3Party-Diffie–Hellman-2Rounds/: main.py
readme/: .header.yml  01-FR-comparatif.md  02-FR-solutions.md  03-FR-specifications.md  04-FR-implementation.md  05-FR-fonctionnalites.md  Makefile
(+3 files in other folders)
