[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
eframe = "0.20.1"
egui = "0.20.1"
anyhow = "=1.0.66"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
chacha20 = "0.9.0"
hex = "0.3.1"
hex-literal = "0.3.4"
rand_core = { version="0.6.4", features = ["getrandom"]}
rand = "0.8.5"
k256 = { version="0.11.6", features=["ecdh", "serde", "pem"]}
aes-gcm-siv = "0.11.1"
pbkdf2 = "0.11.0"
hkdf = "0.12.3"
sha2 = "0.10.6"

