[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
actix-web = { version = "4.2.1", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
env_logger = "0.9.3"
log = "0.4.17"
openssl = "0.10.42"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.22.0", features = ["full"] }
k256 = {version="0.11.6", features=["ecdh"]}
bytebuffer = "2.0.1"
growable-bloom-filter = "2.0.1"
rand = "0.8.5"
snailquote = "0.3.1"
#client = { version = "0.1.0", path = "../client" }
